# kkk

./: .clippy.toml  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  justfile  pyproject.toml  skills-lock.json
.agents/skills/add-instrument-driver/: SKILL.md
.agents/skills/validate-driver-hardware/: SKILL.md
.claude/agents/: hardware-test-runner.md  manual-spec-extractor.md
.claude/skills/add-instrument-driver/: SKILL.md
.claude/skills/validate-driver-hardware/: SKILL.md
.codex/agents/: hardware-test-runner.toml  manual-spec-extractor.toml
.github/: copilot-instructions.md  pull_request_template.md  release-please-config.json  release-please-manifest.json
.github/ISSUE_TEMPLATE/: bug_report.yml  driver_request.yml
.github/workflows/: build-check-test.yml  deploy-docs.yml  docs-check.yml  release-please-publish.yml
crates/instro-test-utils/: Cargo.toml
crates/instro-test-utils/src/: lib.rs
crates/opcua-test/: Cargo.toml
crates/opcua-test/src/: lib.rs
crates/opcua-test/src/server/: builder.rs  mod.rs  spec.rs
crates/opcua-test/tests/: server_smoke.rs
docs/guides/: AGENTS.md  CONTRIBUTING.md  README.md  custom.css  docs.json  generate_examples.py  index.mdx
docs/guides/instrumentation/: cli.mdx  contrib.mdx  custom-instruments.mdx  daq.mdx  dmm.mdx  driver-dependencies.mdx  eload.mdx  examples.mdx  exceptions.mdx  installation.mdx  library.mdx  overview.mdx  psu-simulator.mdx  psu.mdx  publishers.mdx  quickstart.mdx  scope.mdx
docs/guides/instrumentation/protocols/: ethernetip.mdx  (+2 more)
docs/guides/migration/: migrate_to_instro.py  v1.mdx
docs/reference/: mkdocs.yml
docs/reference/src/: index.md
examples/custom/: simple_temp_controller.py
examples/daq/: daq_analog_loopback.py  daq_multi_rate_ni.py  daq_read_analog_hw_timed.py  daq_read_analog_hw_timed_no_background.py  daq_read_analog_sw_timed.py  daq_read_digital_line.py  daq_read_digital_port.py  daq_relays.py  daq_write_analog_sw_timed.py  daq_write_digital_line.py  daq_write_digital_port.py
examples/dmm/: dmm_basic.py
examples/eload/: eload.py
examples/ethernetip/: ethernetip_example.py  minimal_example.py  programmatic_config_example.py  sample_device.json
examples/i2c/: .gitignore  i2c_basic.py  i2c_command.py
examples/modbus/: labjack_t4_loopback_test.py  minimal_example.py  modbus_example.py  programmatic_config_example.py  sample_device.json  simulated_modbus_device.json
examples/psu/: psu.py  psu_background_daemon.py
examples/publishers/: publish_buffered.py  publish_custom.py  publish_file.py  publish_queued.py
examples/test_rack_example/: test_rack.py
instro/cli/: discover.py  main.py
instro/daq/: __init__.py  daq.py  types.py
instro/daq/drivers/: __init__.py  keysight_34980a.py
instro/daq/scaling/: __init__.py  scaling.py  thermocouple.py
instro/dmm/: __init__.py  dmm.py  types.py
instro/dmm/drivers/: __init__.py  agilent_a34401a.py  keithley_2400.py
instro/eload/: __init__.py  eload.py  types.py
instro/eload/drivers/: __init__.py  bk_85xxb.py
instro/i2c/: __init__.py  i2c.py  types.py
instro/i2c/drivers/: __init__.py
instro/lib/: __init__.py  exceptions.py  instrument.py  nominal.py  types.py
instro/lib/publishers/: __init__.py  channel_buffer.py  files.py  nominal_connect.py  nominal_core.py  publisher.py
instro/lib/transports/: __init__.py  visa.py
instro/modbus/: __init__.py  modbus.py  sim_server.py  types.py
instro/psu/: __init__.py  psu.py  scpi_sim_server.py
instro/psu/drivers/: __init__.py  bk_9115.py  bk_914x.py  keysight_e36100.py  keysight_n5700.py  rigol_dp800.py  siglent_spd3303.py  simulated.py  tdk_lambda_genesys.py
tests/: cpppo_sim_server.py  ethernetip_fakes.py  ethernetip_wheel_smoke.py  test_cpppo_sim_server.py  test_ethernetip_bindings.py  test_ethernetip_config_data_type.py  test_ethernetip_config_timing.py  test_ethernetip_optional_native.py  test_ethernetip_python_api.py  test_ethernetip_route_path_config.py  test_examples.py  test_exceptions.py  test_instro_scope.py
tests/cli/: test_discover.py
tests/contrib/: test_contrib_smoke.py
tests/contrib/psu/: test_matrix_wps300s_software.py
tests/daq/: test_daq_drivers.py
tests/daq/keysight34980A/: test_keysight_34980A_hardware.py
tests/daq/labjack/: test_labjack_t4_hardware.py  test_labjack_t8_hardware.py
tests/daq/mcc/: test_mccdaq_hardware.py
tests/dmm/: test_instro_dmm.py
tests/dmm/agilent/: test_agilent_34401a_hardware.py  test_agilent_34401a_software.py
tests/dmm/keithley/: test_keithley_2400_hardware.py  test_keithley_2400_software.py
tests/eload/: test_eload_drivers.py
tests/i2c/: test_i2c_legacy_naming.py
tests/i2c/totalphase/: test_aardvark_hardware.py
tests/lib/: test_instrumentation.py  test_nominal_connect_publisher.py  test_visa_driver.py
tests/modbus/: test_modbus_autostart.py  test_modbus_config_types.py  test_modbus_groups_bitmap.py  test_modbus_readwrite.py  test_modbus_validation.py  test_modbus_write_safety.py  test_protocol_scaling.py
tests/modbus/configs/: invalid_overlap_coils.json  invalid_overlap_holding_registers.json  malformed.json  missing_device.json  test_config_types.json  test_readwrite_device.json  valid_same_address_different_types.json
tests/psu/: test_psu_drivers.py  test_scpi_sim_server.py
tests/psu/bk/: test_bk_9115_hardware.py  test_bk_9115_software.py  test_bk_914x_hardware.py  test_bk_914x_software.py
tests/psu/keysight/: test_keysight_e36100_hardware.py  test_keysight_e36100_software.py  test_keysight_n5700_software.py
tests/psu/rigol/: test_rigol_dp800_hardware.py  test_rigol_dp800_software.py
tests/psu/siglent/: test_siglent_spd3303_hardware.py  test_siglent_spd3303_software.py
tests/psu/simulated/: test_simulated_psu_hardware.py  test_simulated_psu_software.py
tests/psu/tdk/: test_tdk_lambda_genesys_hardware.py  test_tdk_lambda_genesys_software.py
tests/scope/: test_scope_legacy_naming.py
tests/scope/siglent/: test_siglent_sds1000x_e_hardware.py
tests/typecheck/: ethernetip_invalid_read_tags.py  ethernetip_valid.py
(+47 files in other folders)
