[project]
name = "instro"
version = "0.13.0"
description = "Typed Python API for test-and-measurement instruments: power supplies, multimeters, electronic loads, DAQs, and more"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastavro[snappy]>=1.12.1",
    "nominal>=1.99.0,<2.0.0",
    "pydantic>=2.0",
    "pymodbus>=3.10,<3.13",
    "pyserial>=3.5",
    "pyvisa>=1.15",
    # Enable every pyvisa-py backend for NI-VISA-level interface coverage: USB-TMC
    # (usb-full bundles libusb so no system libusb is needed), GPIB (gpib-ctypes; a
    # native GPIB driver is still required), TCPIP discovery (psutil), HiSLIP discovery
    # (hislip-discovery), and VICP (vicp). The ASRL/serial backend is covered by the
    # pyserial dependency above.
    "pyvisa-py[usb-full,gpib-ctypes,psutil,hislip-discovery,vicp]>=0.8.1,<0.9",
    "textual>=0.80",
    "thermocouples>=2.1.2",
    "typer>=0.12",
]

[project.optional-dependencies]
# Hardware-specific drivers with vendor SDKs
daq = ["instro-daq-ni", "instro-daq-labjack", "instro-daq-mcc"]
labjack = ["instro-daq-labjack"]
nidaq = ["instro-daq-ni"]
mccdaq = ["instro-daq-mcc"]
i2c = ["instro-i2c-aardvark"]
aardvark = ["instro-i2c-aardvark"]
contrib = ["instro-contrib"]
all = [
    "instro-daq-ni",
    "instro-daq-labjack",
    "instro-daq-mcc",
    "instro-i2c-aardvark",
    "instro-contrib",
]

[project.urls]
Homepage = "https://github.com/nominal-io/instro"
Repository = "https://github.com/nominal-io/instro"
Issues = "https://github.com/nominal-io/instro/issues"

[project.scripts]
instro = "instro.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["instro"]

[dependency-groups]
dev = [
    "ruff>=0.12.2,<0.13",
    "mypy>=1.15.0,<2",
    "cpppo>=4.0.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings>=0.30.1",
    "mkdocstrings-python>=1.19.0",
    "types-requests>=2.32.4.20250913",
    "types-pyserial>=3.0",
    "instro-ethernetip",
    "instro-unstable",
    "instro-contrib",
]
test = [
    "cpppo>=4.0.0",
    "pytest>=9.0.3,<10",
]

[tool.uv]
default-groups = ["dev", "test"]

[tool.uv.sources]
instro-daq-ni = { workspace = true }
instro-daq-labjack = { workspace = true }
instro-daq-mcc = { workspace = true }
instro-i2c-aardvark = { workspace = true }
instro-ethernetip = { workspace = true }
instro-unstable = { workspace = true }
instro-contrib = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/instro-daq-ni",
    "packages/instro-daq-labjack",
    "packages/instro-daq-mcc",
    "packages/instro-i2c-aardvark",
    "packages/instro-ethernetip",
    "packages/instro-unstable",
    "packages/instro-contrib",
]

[tool.ruff]
line-length = 120
include = [
    "instro/**/*.py",
    "packages/**/instro/**/*.py",
    "tests/**/*.py",
    "examples/**/*.py",
]

[tool.ruff.lint]
select = [
    "I", # isort
    "D", # pydocstyle (docstring rules)
]
ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D107", # Missing docstring in __init__
]

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-var-parameters = true

[tool.ruff.lint.pylint]
max-args = 10

[tool.mypy]
strict = false
check_untyped_defs = true
namespace_packages = true
explicit_package_bases = true
mypy_path = [
    ".",
    "packages/instro-daq-ni",
    "packages/instro-daq-labjack",
    "packages/instro-daq-mcc",
    "packages/instro-i2c-aardvark",
    "packages/instro-ethernetip",
    "packages/instro-unstable",
    "packages/instro-contrib",
]
packages = ["instro", "instro.unstable.ethernetip"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# --ignore=tests/daq/mcc: mccdaq tests depend on the optional `mccdaq` extra
# (mcculw is Windows-only) and must be invoked explicitly (e.g. `pytest tests/daq/mcc`).
# --ignore=tests/daq/labjack: labjack tests depend on the optional `labjack` extra
# (LJM SDK; hardware-only) and must be invoked explicitly (e.g. `pytest tests/daq/labjack`).
# --ignore=tests/i2c/totalphase: Aardvark tests depend on the optional `i2c` extra
# (pyaardvark; hardware-only) and must be invoked explicitly (e.g.
# `uv run --extra i2c python tests/i2c/totalphase/test_aardvark_hardware.py`).
addopts = "-m 'not hardware' --ignore=tests/daq/mcc --ignore=tests/daq/labjack --ignore=tests/i2c/totalphase"
markers = [
    "hardware: tests that require a physical device and loopback wiring (deselected by default)",
]
